<resources>
    <string name="app_name">Lviv Airport</string>
    <string name="my_tickets">My tickets</string>
    <string name="flights">Flights</string>
    <string name="type_the_destination_city">Type the destination city...</string>
    <string name="book_it">Book it</string>
    <string name="departure_at">Depart. at:</string>
    <string name="arrive_at">Arrive at:</string>
    <string name="no_one_ticket">No one ticket</string>
    <string name="no_one_flight">No one flight</string>
    <string name="show_ticket">Show ticket</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="proceed_without_signing_in">Proceed without signing in</string>
    <string name="lviv_airport">Lviv airport</string>
    <string name="sign_in_as_a_guest">Sign in as a guest</string>
    <string name="billing_msg">Here should be a Google Billing dialog, but it\'s the simplest example ^)</string>
    <string name="you_booked_the_ticket">\"You booked the ticket with id \"</string>
    <string name="okay">Okay</string>
</resources>